<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Go Lokal</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="full_name">Full Name</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="new_to_lokal">New to the Lokal Community? Register here</string>
    <string name="image_description">GoLokal image</string>
    <string name="username">User Name</string>
    <string-array name="states">
        <item >Georgia</item>
        <item />
    </string-array>
    <string-array name="cities">
        <item>Statesboro</item>
        <item>Athens</item>
        <item>Atlanta</item>
        <item>Savannah</item>
    </string-array>
    <string-array name="datechoices">
        <item>All Days</item>
        <item>Today</item>
    </string-array>
    <string name="mainColor">#E5C41A</string>
    <string-array name="categories">
        <item >Food</item>
        <item >Concerts</item>
        <item >Outdoor</item>
         <item >Nightlife</item>
        <item >College</item>
        <item >Philanthropy</item>
        <item>Sports</item>
        <item> Entertainment</item>
        <item> Other</item>
    </string-array>
    <string name="action_logout">Logout</string>
    <string name="action_myevents">My Events</string>

</resources>
