<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
     >
	<RelativeLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"  android:background="#E5C41A">
	    <!-- Header Starts -->
	    <LinearLayout 	android:id="@+id/header"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content">

	        	<!--  Logo Ends -->

	        <TextView
	            android:id="@+id/textView1"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="Go Lokal"
	            android:textColor="#FFFFFF"
	            android:layout_marginLeft="100dp"
	            android:textAppearance="?android:attr/textAppearanceLarge" />

	    </LinearLayout>
	    <!-- Header Ends -->
	    
	    <!-- Login Form Starts -->
	    	<LinearLayout
	    	     
	    	    android:orientation="vertical"
	    	    android:layout_width="match_parent"
	    	    android:layout_height="wrap_content"
	    	    android:padding="10dp"
	    	    android:layout_below="@id/header" >
	        <!-- Email label -->

	        	<TextView
	        	    android:layout_width="match_parent"
	        	    android:layout_height="wrap_content"
	        	    android:text="@string/username"
	        	    android:textColor="#000000" /> <!-- old text color 372c24 -->

	        	<EditText
	        	    android:id="@+id/username"
	        	    android:layout_width="match_parent"
	        	    android:layout_height="wrap_content"
	        	    android:layout_marginBottom="20dp"
	        	    android:layout_marginTop="5dp"
	        	    android:hint="Enter Username"
	        	    android:inputType="text"
	        	    android:singleLine="true" />

	        	<!--  Password Label  -->

	        	<TextView
	        	    android:layout_width="match_parent"
	        	    android:layout_height="wrap_content"
	        	    android:text="@string/password"
	        	    android:textColor="#000000" />

	        	<EditText
	        	    android:id="@+id/password"
	        	    android:layout_width="match_parent"
	        	    android:layout_height="wrap_content"
	        	    android:layout_marginTop="5dp"
	        	    android:hint="Enter Password"
	        	    android:inputType="textPassword"
	        	    android:singleLine="true" />
	        
	        	<!--  Login Button -->
	        	<Button android:id="@+id/btnLogin"
	        	    android:layout_width="match_parent"
	        	    android:layout_height="wrap_content"
	        	    android:layout_marginTop="10dp"
	        	    android:background="#ffffff"
	        	    android:text="@string/login"/>
	        	<!--  Link to Registration Screen -->
	        	<TextView	 android:id="@+id/link_to_register"
	        	    android:layout_width="match_parent"
	        	    android:layout_height="wrap_content"
	        	    android:layout_marginTop="40dp"
	        	    android:layout_marginBottom="40dp"
	        	    android:text="@string/new_to_lokal"
	        	    android:gravity="center"
	        	    android:textSize="20sp"
	        	    android:textColor="#000000"
	        	    />
	   
	    	</LinearLayout>
	    <!-- Lgoin Form Ends -->
	    
	</RelativeLayout>
    

</ScrollView>
