<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
     >
	<RelativeLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"  android:background="#E5C41A">
	    <!-- Header Starts -->
	  
	    		<!-- Place footer next to header to set z-index property to minus value -->

	    
	    <!-- Registration Form Starts -->
	    	<LinearLayout
	    	     
	    	    android:orientation="vertical"
	    	    android:layout_width="match_parent"
	    	    android:layout_height="wrap_content"
	    	    android:padding="10dp"
	    	    android:layout_below="@id/header" >
	    	    
	    	    
	    	    <!--  Email Label  -->

	        	<TextView
	        	    android:layout_width="match_parent"
	        	    android:layout_height="wrap_content"
	        	    android:text="@string/email"
	        	    android:textColor="#ffffff"
	        	    android:textSize="20sp" />

	        	<EditText
	        	    android:id="@+id/reg_email"
	        	    android:layout_width="match_parent"
	        	    android:layout_height="wrap_content"
	        	    android:layout_marginBottom="20dp"
	        	    android:layout_marginTop="5dp"
	        	    android:hint="@string/email"
	        	    android:inputType="textEmailAddress"
	        	    android:singleLine="true" />
	        	
	        	
	        <!-- User Name label -->

	        	<TextView
	        	    android:layout_width="match_parent"
	        	    android:layout_height="wrap_content"
	        	    android:text="@string/username"
	        	    android:textColor="#ffffff"
	        	    android:textSize="20sp" />

	        	<EditText
	        	    android:id="@+id/reg_username"
	        	    android:layout_width="match_parent"
	        	    android:layout_height="wrap_content"
	        	    android:layout_marginBottom="20dp"
	        	    android:layout_marginTop="5dp"
	        	    android:contentDescription="@string/username"
	        	    android:hint="Enter your desired username here"
	        	    android:inputType="text"
	        	    android:singleLine="true" />

	        	

	        	<!--  Password Label  -->

	        	<TextView
	        	    android:layout_width="match_parent"
	        	    android:layout_height="wrap_content"
	        	    android:text="@string/password"
	        	    android:textColor="#ffffff"
	        	    android:textSize="20sp" />

	        	<EditText
	        	    android:id="@+id/reg_password"
	        	    android:layout_width="match_parent"
	        	    android:layout_height="wrap_content"
	        	    android:layout_marginTop="5dp"
	        	    android:hint="@string/password"
	        	    android:inputType="textPassword"
	        	    android:singleLine="true" />
	        	
	        	<!-- Re-Enter Password Label -->
	        	
	        	<TextView 
	        	    android:layout_width="match_parent"
	        	    android:layout_height="wrap_content"
	        	    android:text="Re-Enter Password"
	        	    android:textColor="#ffffff"
	        	    android:textSize="20sp"
	        	    />
	        	
	        	<EditText
	        	    android:id="@+id/reg_repassword"
	        	    android:layout_width="match_parent"
	        	    android:layout_height="wrap_content"
	        	    android:layout_marginTop="5dp"
	        	    android:hint=" Re-enter your password to confirm"
	        	    android:inputType="textPassword"
	        	    android:singleLine="true"
	        	    />
	        	
	        	
	        
	        	<!--  Register Button -->

	        	<Button
	        	    android:id="@+id/btnRegister"
	        	    android:layout_width="match_parent"
	        	    android:layout_height="wrap_content"
	        	    android:layout_marginTop="10dp"
	        	    android:background="#ffffff"
	        	    android:text="@string/register" />

	        	<!--  Link to Login Screen -->
	        	<TextView	 android:id="@+id/link_to_login"
	        	    android:layout_width="match_parent"
	        	    android:layout_height="wrap_content"
	        	    android:layout_marginTop="40dp"
	        	    android:layout_marginBottom="40dp"
	        	    android:text="Already have an account? Login here"
	        	    android:gravity="center"
	        	    android:textSize="20sp"
	        	    android:textColor="#ffffff"
	        	    />
	   
	    	</LinearLayout>
	    <!-- Registration Form Ends -->
	    
	</RelativeLayout>
    

</ScrollView>
